[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
exclude = ".venv"

[tool.mypy]
disallow_untyped_defs = true

[tool.poetry]
name = "pymine"
version = "1.3.0"
description = "Python library for communicating with ELCI plugin."
authors = ["Martin O'Hanlon <martin@ohanlonweb.com>", "Artemis Rosman <github.com/rozukke>", "Popov Nikita <popovnikita01@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
flake8 = "^7.1.0"
flake8-pyproject = "^1.2.3"
mypy = "^1.10.1"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"